# OMaze

./: .gitignore  OG.tree  OMaze.opam  README.md  README_BOOTSTRAP.md  RequireDeps.cmake  bootstrap.py  conanfile.py  deps_manifest.json  dune-project  extract_excludes_from_errors.py  gen_remote_deps_skeleton.py  generate.tree  litert.tree  loader_default_kind_note.txt  query-instructions.md  remote_deps.fix.json  remote_deps.json  run_bazel_query.sh  validate_remote_deps.py
output/: CMakeLists.txt  generate.tree
output/ci/tools/python/vendor_sdk/: CMakeLists.txt
output/ci/tools/python/wheel/: CMakeLists.txt
output/litert/: CMakeLists.txt
output/litert/ats/: CMakeLists.txt
output/litert/build_common/: CMakeLists.txt
output/litert/c/: CMakeLists.txt
output/litert/c/internal/: CMakeLists.txt
output/litert/c/options/: CMakeLists.txt
output/litert/cc/: CMakeLists.txt
output/litert/cc/dynamic_runtime/: CMakeLists.txt
output/litert/cc/internal/: CMakeLists.txt
output/litert/cc/options/: CMakeLists.txt
output/litert/core/: CMakeLists.txt
output/litert/core/cache/: CMakeLists.txt
output/litert/core/model/: CMakeLists.txt
output/litert/core/util/: CMakeLists.txt
output/litert/integration_test/: CMakeLists.txt
output/litert/integration_test/models/: CMakeLists.txt
output/litert/kotlin/: CMakeLists.txt
output/litert/python/: CMakeLists.txt
output/litert/python/aot/: CMakeLists.txt
output/litert/python/aot/ai_pack/: CMakeLists.txt
output/litert/python/aot/core/: CMakeLists.txt
output/litert/python/aot/vendors/: CMakeLists.txt
output/litert/python/internal/: CMakeLists.txt
output/litert/runtime/: CMakeLists.txt
output/litert/runtime/accelerators/: CMakeLists.txt
output/litert/runtime/compiler/: CMakeLists.txt
output/litert/runtime/dispatch/: CMakeLists.txt
output/litert/samples/async_segmentation/: CMakeLists.txt
output/litert/samples/semantic_similarity/: CMakeLists.txt
output/litert/sdk_util/: CMakeLists.txt
output/litert/test/: CMakeLists.txt
output/litert/test/generators/: CMakeLists.txt
output/litert/tools/: CMakeLists.txt
output/litert/tools/flags/: CMakeLists.txt
output/litert/vendors/c/: CMakeLists.txt
output/litert/vendors/examples/: CMakeLists.txt
output/litert/vendors/mediatek/: CMakeLists.txt
output/litert/vendors/qualcomm/: CMakeLists.txt
output/tflite/: CMakeLists.txt
output/tflite/acceleration/configuration/: CMakeLists.txt
output/tflite/async/c/: CMakeLists.txt
output/tflite/async/testing/: CMakeLists.txt
output/tflite/c/: CMakeLists.txt
output/tflite/c/jni/: CMakeLists.txt
output/tflite/converter/: CMakeLists.txt
output/tflite/converter/core/: CMakeLists.txt
output/tflite/converter/core/api/: CMakeLists.txt
output/tflite/converter/debug/: CMakeLists.txt
output/tflite/converter/delegates/: CMakeLists.txt
output/tflite/converter/integrations/: CMakeLists.txt
output/tflite/converter/metrics/: CMakeLists.txt
output/tflite/converter/python/: CMakeLists.txt
output/tflite/converter/quantization/: CMakeLists.txt
output/tflite/converter/schema/: CMakeLists.txt
output/tflite/converter/sparsity/: CMakeLists.txt
output/tflite/converter/stablehlo/: CMakeLists.txt
output/tflite/converter/tests/: CMakeLists.txt
output/tflite/core/: CMakeLists.txt
output/tflite/core/api/: CMakeLists.txt
output/tflite/core/c/: CMakeLists.txt
output/tflite/core/kernels/: CMakeLists.txt
output/tflite/core/shims/: CMakeLists.txt
output/tflite/core/tools/: CMakeLists.txt
output/tflite/delegates/: CMakeLists.txt
output/tflite/delegates/coreml/: CMakeLists.txt
output/tflite/delegates/flex/: CMakeLists.txt
output/tflite/delegates/gpu/: CMakeLists.txt
output/tflite/delegates/hexagon/: CMakeLists.txt
output/tflite/delegates/nnapi/: CMakeLists.txt
output/tflite/delegates/utils/: CMakeLists.txt
output/tflite/delegates/xnnpack/: CMakeLists.txt
output/tflite/examples/experimental_new_converter/: CMakeLists.txt
output/tflite/examples/minimal/: CMakeLists.txt
output/tflite/experimental/genai/: CMakeLists.txt
output/tflite/experimental/microfrontend/: CMakeLists.txt
output/tflite/experimental/resource/: CMakeLists.txt
output/tflite/experimental/shlo/: CMakeLists.txt
output/tflite/g3doc/tools/: CMakeLists.txt
output/tflite/java/: CMakeLists.txt
output/tflite/java/jni/: CMakeLists.txt
output/tflite/java/ovic/: CMakeLists.txt
output/tflite/kernels/: CMakeLists.txt
output/tflite/kernels/gradient/: CMakeLists.txt
output/tflite/kernels/internal/: CMakeLists.txt
output/tflite/kernels/perception/: CMakeLists.txt
output/tflite/kernels/shim/: CMakeLists.txt
output/tflite/lib_package/: CMakeLists.txt
output/tflite/nnapi/sl/: CMakeLists.txt
output/tflite/profiling/: CMakeLists.txt
output/tflite/profiling/proto/: CMakeLists.txt
output/tflite/profiling/telemetry/: CMakeLists.txt
output/tflite/python/: CMakeLists.txt
output/tflite/python/analyzer_wrapper/: CMakeLists.txt
output/tflite/python/authoring/: CMakeLists.txt
output/tflite/python/interpreter_wrapper/: CMakeLists.txt
output/tflite/python/metrics/: CMakeLists.txt
output/tflite/python/optimize/: CMakeLists.txt
output/tflite/python/testdata/: CMakeLists.txt
output/tflite/schema/: CMakeLists.txt
output/tflite/schema/builtin_ops_header/: CMakeLists.txt
output/tflite/stablehlo/schema/: CMakeLists.txt
output/tflite/testdata/src/: CMakeLists.txt
output/tflite/testing/: CMakeLists.txt
output/tflite/testing/kernel_test/: CMakeLists.txt
output/tflite/toco/: CMakeLists.txt
output/tflite/toco/logging/: CMakeLists.txt
output/tflite/toco/python/: CMakeLists.txt
output/tflite/tools/: CMakeLists.txt
output/tflite/tools/benchmark/: CMakeLists.txt
output/tflite/tools/delegates/: CMakeLists.txt
output/tflite/tools/evaluation/: CMakeLists.txt
output/tflite/tools/optimize/: CMakeLists.txt
output/tflite/tools/serialization/: CMakeLists.txt
output/tflite/tools/signature/: CMakeLists.txt
output/tflite/tools/strip_buffers/: CMakeLists.txt
output/tflite/tutorials/: CMakeLists.txt
(+363 files in other folders)
