(lang dune 3.20)

(name OMaze)

(generate_opam_files true)

(source
 (github tomotero1984/omaze))

(authors "Tom Otero <tomotero1984@gmail.com>")

(maintainers "Tom Otero <tomotero1984.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name OMaze)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
