cmake_minimum_required(VERSION 3.15)
project(OMaze_Converted)

add_subdirectory(ci/tools/python/vendor_sdk)
add_subdirectory(ci/tools/python/vendor_sdk/mediatek)
add_subdirectory(ci/tools/python/vendor_sdk/qualcomm)
add_subdirectory(ci/tools/python/wheel)
add_subdirectory(ci/tools/python/wheel/utils)
add_subdirectory(litert)
add_subdirectory(litert/ats)
add_subdirectory(litert/build_common)
add_subdirectory(litert/c)
add_subdirectory(litert/c/internal)
add_subdirectory(litert/c/options)
add_subdirectory(litert/cc)
add_subdirectory(litert/cc/dynamic_runtime)
add_subdirectory(litert/cc/dynamic_runtime/options)
add_subdirectory(litert/cc/internal)
add_subdirectory(litert/cc/options)
add_subdirectory(litert/compiler/plugin)
add_subdirectory(litert/core)
add_subdirectory(litert/core/cache)
add_subdirectory(litert/core/model)
add_subdirectory(litert/core/util)
add_subdirectory(litert/integration_test)
add_subdirectory(litert/integration_test/models)
add_subdirectory(litert/kotlin)
add_subdirectory(litert/python)
add_subdirectory(litert/python/aot)
add_subdirectory(litert/python/aot/ai_pack)
add_subdirectory(litert/python/aot/core)
add_subdirectory(litert/python/aot/vendors)
add_subdirectory(litert/python/aot/vendors/example)
add_subdirectory(litert/python/aot/vendors/google_tensor)
add_subdirectory(litert/python/aot/vendors/mediatek)
add_subdirectory(litert/python/aot/vendors/qualcomm)
add_subdirectory(litert/python/internal)
add_subdirectory(litert/python/litert_wrapper/common)
add_subdirectory(litert/python/litert_wrapper/compiled_model_wrapper)
add_subdirectory(litert/python/litert_wrapper/tensor_buffer_wrapper)
add_subdirectory(litert/runtime)
add_subdirectory(litert/runtime/accelerators)
add_subdirectory(litert/runtime/accelerators/dispatch)
add_subdirectory(litert/runtime/accelerators/xnnpack)
add_subdirectory(litert/runtime/compiler)
add_subdirectory(litert/runtime/dispatch)
add_subdirectory(litert/samples/async_segmentation)
add_subdirectory(litert/samples/semantic_similarity)
add_subdirectory(litert/sdk_util)
add_subdirectory(litert/test)
add_subdirectory(litert/test/generators)
add_subdirectory(litert/tools)
add_subdirectory(litert/tools/culprit_finder)
add_subdirectory(litert/tools/flags)
add_subdirectory(litert/tools/flags/vendors)
add_subdirectory(litert/vendors/c)
add_subdirectory(litert/vendors/cc)
add_subdirectory(litert/vendors/examples)
add_subdirectory(litert/vendors/google_tensor)
add_subdirectory(litert/vendors/google_tensor/compiler)
add_subdirectory(litert/vendors/google_tensor/dispatch)
add_subdirectory(litert/vendors/intel_openvino)
add_subdirectory(litert/vendors/intel_openvino/compiler)
add_subdirectory(litert/vendors/intel_openvino/dispatch)
add_subdirectory(litert/vendors/mediatek)
add_subdirectory(litert/vendors/mediatek/compiler)
add_subdirectory(litert/vendors/mediatek/compiler/legalizations)
add_subdirectory(litert/vendors/mediatek/dispatch)
add_subdirectory(litert/vendors/mediatek/schema)
add_subdirectory(litert/vendors/qualcomm)
add_subdirectory(litert/vendors/qualcomm/compiler)
add_subdirectory(litert/vendors/qualcomm/core)
add_subdirectory(litert/vendors/qualcomm/core/backends)
add_subdirectory(litert/vendors/qualcomm/core/builders)
add_subdirectory(litert/vendors/qualcomm/core/dump)
add_subdirectory(litert/vendors/qualcomm/core/schema)
add_subdirectory(litert/vendors/qualcomm/core/transformation)
add_subdirectory(litert/vendors/qualcomm/core/utils)
add_subdirectory(litert/vendors/qualcomm/core/wrappers)
add_subdirectory(litert/vendors/qualcomm/core/wrappers/tests)
add_subdirectory(litert/vendors/qualcomm/dispatch)
add_subdirectory(litert/vendors/qualcomm/qnn_backend_test)
add_subdirectory(litert/vendors/qualcomm/tools)
add_subdirectory(tflite)
add_subdirectory(tflite/acceleration/configuration)
add_subdirectory(tflite/acceleration/configuration/c)
add_subdirectory(tflite/async)
add_subdirectory(tflite/async/c)
add_subdirectory(tflite/async/interop/c)
add_subdirectory(tflite/async/testing)
add_subdirectory(tflite/c)
add_subdirectory(tflite/c/jni)
add_subdirectory(tflite/converter)
add_subdirectory(tflite/converter/core)
add_subdirectory(tflite/converter/core/api)
add_subdirectory(tflite/converter/core/c)
add_subdirectory(tflite/converter/debug)
add_subdirectory(tflite/converter/delegates)
add_subdirectory(tflite/converter/delegates/flex)
add_subdirectory(tflite/converter/experimental/common)
add_subdirectory(tflite/converter/experimental/remat)
add_subdirectory(tflite/converter/experimental/tac)
add_subdirectory(tflite/converter/experimental/tac/examples)
add_subdirectory(tflite/converter/experimental/tac/hardwares)
add_subdirectory(tflite/converter/experimental/tac/py_wrapper)
add_subdirectory(tflite/converter/experimental/tac/tests)
add_subdirectory(tflite/converter/experimental/tac/tests/e2e)
add_subdirectory(tflite/converter/experimental/tac/utils)
add_subdirectory(tflite/converter/integrations)
add_subdirectory(tflite/converter/integrations/python/mlir)
add_subdirectory(tflite/converter/integrations/python/mlir/_mlir_libs)
add_subdirectory(tflite/converter/kernels)
add_subdirectory(tflite/converter/kernels/internal)
add_subdirectory(tflite/converter/kernels/internal/utils)
add_subdirectory(tflite/converter/metrics)
add_subdirectory(tflite/converter/python)
add_subdirectory(tflite/converter/python/interpreter_wrapper)
add_subdirectory(tflite/converter/quantization)
add_subdirectory(tflite/converter/quantization/common)
add_subdirectory(tflite/converter/quantization/common/quantization_lib)
add_subdirectory(tflite/converter/quantization/ir)
add_subdirectory(tflite/converter/quantization/lite)
add_subdirectory(tflite/converter/quantization/lite/toco_legacy)
add_subdirectory(tflite/converter/quantization/tensorflow)
add_subdirectory(tflite/converter/quantization/tensorflow/tests)
add_subdirectory(tflite/converter/quantization/tests)
add_subdirectory(tflite/converter/schema)
add_subdirectory(tflite/converter/sparsity)
add_subdirectory(tflite/converter/stablehlo)
add_subdirectory(tflite/converter/stablehlo/odml_converter)
add_subdirectory(tflite/converter/stablehlo/odml_converter/tests)
add_subdirectory(tflite/converter/stablehlo/tests)
add_subdirectory(tflite/converter/stablehlo/transforms/legalize_hlo_conversions)
add_subdirectory(tflite/converter/tests)
add_subdirectory(tflite/converter/tests/debuginfo)
add_subdirectory(tflite/converter/tests/end2end)
add_subdirectory(tflite/converter/tests/flatbuffer2mlir)
add_subdirectory(tflite/converter/tests/mlir2flatbuffer)
add_subdirectory(tflite/converter/tools)
add_subdirectory(tflite/converter/tools/optimize)
add_subdirectory(tflite/converter/tools/versioning)
add_subdirectory(tflite/core)
add_subdirectory(tflite/core/acceleration/configuration)
add_subdirectory(tflite/core/acceleration/configuration/c)
add_subdirectory(tflite/core/api)
add_subdirectory(tflite/core/async)
add_subdirectory(tflite/core/async/c)
add_subdirectory(tflite/core/async/interop)
add_subdirectory(tflite/core/async/interop/c)
add_subdirectory(tflite/core/async/testing)
add_subdirectory(tflite/core/c)
add_subdirectory(tflite/core/experimental/acceleration/configuration)
add_subdirectory(tflite/core/experimental/acceleration/configuration/c)
add_subdirectory(tflite/core/experimental/acceleration/mini_benchmark/c)
add_subdirectory(tflite/core/kernels)
add_subdirectory(tflite/core/shims)
add_subdirectory(tflite/core/tools)
add_subdirectory(tflite/delegates)
add_subdirectory(tflite/delegates/coreml)
add_subdirectory(tflite/delegates/coreml/builders)
add_subdirectory(tflite/delegates/external)
add_subdirectory(tflite/delegates/flex)
add_subdirectory(tflite/delegates/flex/java/src/main/java/org/tensorflow/lite/flex)
add_subdirectory(tflite/delegates/flex/java/src/main/native)
add_subdirectory(tflite/delegates/flex/test)
add_subdirectory(tflite/delegates/gpu)
add_subdirectory(tflite/delegates/gpu/cl)
add_subdirectory(tflite/delegates/gpu/cl/default)
add_subdirectory(tflite/delegates/gpu/cl/kernels)
add_subdirectory(tflite/delegates/gpu/cl/testing)
add_subdirectory(tflite/delegates/gpu/common)
add_subdirectory(tflite/delegates/gpu/common/default)
add_subdirectory(tflite/delegates/gpu/common/google)
add_subdirectory(tflite/delegates/gpu/common/selectors)
add_subdirectory(tflite/delegates/gpu/common/selectors/default)
add_subdirectory(tflite/delegates/gpu/common/task)
add_subdirectory(tflite/delegates/gpu/common/tasks)
add_subdirectory(tflite/delegates/gpu/common/tasks/special)
add_subdirectory(tflite/delegates/gpu/common/testing)
add_subdirectory(tflite/delegates/gpu/common/testing/feature_parity)
add_subdirectory(tflite/delegates/gpu/common/testing/feature_parity/generators)
add_subdirectory(tflite/delegates/gpu/common/transformations)
add_subdirectory(tflite/delegates/gpu/gl)
add_subdirectory(tflite/delegates/gpu/gl/compiler)
add_subdirectory(tflite/delegates/gpu/gl/converters)
add_subdirectory(tflite/delegates/gpu/gl/kernels)
add_subdirectory(tflite/delegates/gpu/gl/runtime)
add_subdirectory(tflite/delegates/gpu/gl/workgroups)
add_subdirectory(tflite/delegates/gpu/java/src/main/java/org/tensorflow/lite/gpu)
add_subdirectory(tflite/delegates/gpu/java/src/main/native)
add_subdirectory(tflite/delegates/gpu/metal)
add_subdirectory(tflite/delegates/gpu/metal/benchmarking)
add_subdirectory(tflite/delegates/gpu/metal/kernels)
add_subdirectory(tflite/delegates/hexagon)
add_subdirectory(tflite/delegates/hexagon/builders)
add_subdirectory(tflite/delegates/hexagon/builders/tests)
add_subdirectory(tflite/delegates/hexagon/hexagon_nn)
add_subdirectory(tflite/delegates/hexagon/java)
add_subdirectory(tflite/delegates/hexagon/java/src/main/java/org/tensorflow/lite)
add_subdirectory(tflite/delegates/hexagon/java/src/main/native)
add_subdirectory(tflite/delegates/nnapi)
add_subdirectory(tflite/delegates/nnapi/java/src/main/java/org/tensorflow/lite/nnapi)
add_subdirectory(tflite/delegates/nnapi/java/src/main/native)
add_subdirectory(tflite/delegates/utils)
add_subdirectory(tflite/delegates/utils/dummy_delegate)
add_subdirectory(tflite/delegates/utils/experimental/sample_stable_delegate)
add_subdirectory(tflite/delegates/utils/experimental/stable_delegate)
add_subdirectory(tflite/delegates/xnnpack)
add_subdirectory(tflite/examples/experimental_new_converter)
add_subdirectory(tflite/examples/label_image)
add_subdirectory(tflite/examples/minimal)
add_subdirectory(tflite/experimental/acceleration/compatibility)
add_subdirectory(tflite/experimental/acceleration/configuration)
add_subdirectory(tflite/experimental/acceleration/configuration/c)
add_subdirectory(tflite/experimental/acceleration/mini_benchmark)
add_subdirectory(tflite/experimental/acceleration/mini_benchmark/c)
add_subdirectory(tflite/experimental/acceleration/mini_benchmark/metrics)
add_subdirectory(tflite/experimental/acceleration/mini_benchmark/model_modifier)
add_subdirectory(tflite/experimental/acceleration/mini_benchmark/models)
add_subdirectory(tflite/experimental/genai)
add_subdirectory(tflite/experimental/microfrontend)
add_subdirectory(tflite/experimental/microfrontend/lib)
add_subdirectory(tflite/experimental/ml_adjacent)
add_subdirectory(tflite/experimental/ml_adjacent/algo)
add_subdirectory(tflite/experimental/ml_adjacent/data)
add_subdirectory(tflite/experimental/ml_adjacent/tflite)
add_subdirectory(tflite/experimental/resource)
add_subdirectory(tflite/experimental/shlo)
add_subdirectory(tflite/experimental/shlo/legacy)
add_subdirectory(tflite/experimental/shlo/legacy/bench)
add_subdirectory(tflite/experimental/shlo/legacy/test)
add_subdirectory(tflite/experimental/shlo/ops)
add_subdirectory(tflite/g3doc/tools)
add_subdirectory(tflite/internal)
add_subdirectory(tflite/java)
add_subdirectory(tflite/java/demo/app/src/main)
add_subdirectory(tflite/java/jni)
add_subdirectory(tflite/java/ovic)
add_subdirectory(tflite/java/ovic/demo/app)
add_subdirectory(tflite/java/ovic/src/testdata)
add_subdirectory(tflite/java/src/main/native)
add_subdirectory(tflite/java/src/test/native)
add_subdirectory(tflite/java/src/testhelper/java/org/tensorflow/lite)
add_subdirectory(tflite/kernels)
add_subdirectory(tflite/kernels/ctc)
add_subdirectory(tflite/kernels/gradient)
add_subdirectory(tflite/kernels/internal)
add_subdirectory(tflite/kernels/internal/utils)
add_subdirectory(tflite/kernels/parse_example)
add_subdirectory(tflite/kernels/perception)
add_subdirectory(tflite/kernels/shim)
add_subdirectory(tflite/kernels/shim/test_op)
add_subdirectory(tflite/kernels/variants)
add_subdirectory(tflite/kernels/variants/py)
add_subdirectory(tflite/lib_package)
add_subdirectory(tflite/nnapi)
add_subdirectory(tflite/nnapi/sl)
add_subdirectory(tflite/profiling)
add_subdirectory(tflite/profiling/proto)
add_subdirectory(tflite/profiling/telemetry)
add_subdirectory(tflite/profiling/telemetry/c)
add_subdirectory(tflite/python)
add_subdirectory(tflite/python/analyzer_wrapper)
add_subdirectory(tflite/python/authoring)
add_subdirectory(tflite/python/interpreter_wrapper)
add_subdirectory(tflite/python/kernel_tests/signal)
add_subdirectory(tflite/python/metrics)
add_subdirectory(tflite/python/optimize)
add_subdirectory(tflite/python/testdata)
add_subdirectory(tflite/schema)
add_subdirectory(tflite/schema/builtin_ops_header)
add_subdirectory(tflite/schema/builtin_ops_list)
add_subdirectory(tflite/stablehlo/schema)
add_subdirectory(tflite/testdata/src)
add_subdirectory(tflite/testing)
add_subdirectory(tflite/testing/kernel_test)
add_subdirectory(tflite/toco)
add_subdirectory(tflite/toco/graph_transformations/tests)
add_subdirectory(tflite/toco/logging)
add_subdirectory(tflite/toco/python)
add_subdirectory(tflite/toco/tensorflow_graph_matching)
add_subdirectory(tflite/toco/tflite)
add_subdirectory(tflite/tools)
add_subdirectory(tflite/tools/benchmark)
add_subdirectory(tflite/tools/benchmark/android)
add_subdirectory(tflite/tools/benchmark/experimental/c)
add_subdirectory(tflite/tools/benchmark/experimental/delegate_performance/android)
add_subdirectory(tflite/tools/benchmark/experimental/delegate_performance/android/models)
add_subdirectory(tflite/tools/benchmark/experimental/delegate_performance/android/proto)
add_subdirectory(tflite/tools/benchmark/experimental/delegate_performance/android/src/main/native)
add_subdirectory(tflite/tools/benchmark/experimental/delegate_performance/android/src/test/native)
add_subdirectory(tflite/tools/benchmark/experimental/firebase/android)
add_subdirectory(tflite/tools/benchmark/proto)
add_subdirectory(tflite/tools/delegates)
add_subdirectory(tflite/tools/delegates/compatibility/common)
add_subdirectory(tflite/tools/delegates/compatibility/gpu)
add_subdirectory(tflite/tools/delegates/compatibility/nnapi)
add_subdirectory(tflite/tools/delegates/compatibility/protos)
add_subdirectory(tflite/tools/delegates/experimental/stable_delegate)
add_subdirectory(tflite/tools/evaluation)
add_subdirectory(tflite/tools/evaluation/proto)
add_subdirectory(tflite/tools/evaluation/stages)
add_subdirectory(tflite/tools/evaluation/stages/utils)
add_subdirectory(tflite/tools/evaluation/tasks)
add_subdirectory(tflite/tools/evaluation/tasks/coco_object_detection)
add_subdirectory(tflite/tools/evaluation/tasks/imagenet_image_classification)
add_subdirectory(tflite/tools/evaluation/tasks/inference_diff)
add_subdirectory(tflite/tools/optimize)
add_subdirectory(tflite/tools/optimize/calibration)
add_subdirectory(tflite/tools/optimize/debugging/python)
add_subdirectory(tflite/tools/optimize/python)
add_subdirectory(tflite/tools/optimize/sparsity)
add_subdirectory(tflite/tools/serialization)
add_subdirectory(tflite/tools/signature)
add_subdirectory(tflite/tools/strip_buffers)
add_subdirectory(tflite/tools/versioning)
add_subdirectory(tflite/tutorials)
add_subdirectory(third_party/models)
